fix: give itemcount its own z-index

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -2390,7 +2390,7 @@ a.additional-player-stat:hover{
 
 .inventory-item .item-count{
     position: absolute;
-    z-index: 15;
+    z-index: 16;
     bottom: 2px;
     right: 2px;
     font-size: 24px;
